@@ -693,7 +693,7 @@ if(!Fmath.isNaN(xDouble)){
 if(!Fmath.isPlusInfinity(xDouble)){
 if(!Fmath.isMinusInfinity(xDouble)){
 if(xDouble!=0.0D){
-String xString = ((new Double(xDouble)).toString()).trim();
+String xString = ((Double.valueOf(xDouble)).toString()).trim();
 xTruncated = Double.parseDouble(truncateProcedure(xString, trunc));
 }
 }
@@ -709,7 +709,7 @@ if(!Fmath.isNaN(xFloat)){
 if(!Fmath.isPlusInfinity(xFloat)){
 if(!Fmath.isMinusInfinity(xFloat)){
 if(xFloat!=0.0D){
-String xString = ((new Float(xFloat)).toString()).trim();
+String xString = ((Float.valueOf(xFloat)).toString()).trim();
 xTruncated = Float.parseFloat(truncateProcedure(xString, trunc));
 }
 }
@@ -787,10 +787,10 @@ test = false;
 }
 int preInt = Integer.parseInt(xPreDot);
 preInt += xArray[0];
-xPreDot = (new Integer(preInt)).toString();
+xPreDot = (Integer.valueOf(preInt)).toString();
 tempString = "";
 for(int i=1; i<=trunc; i++){
-tempString += (new Integer(xArray[i])).toString();
+tempString += (Integer.valueOf(xArray[i])).toString();
 }
 xPostDot = tempString;
 }
@@ -802,7 +802,7 @@ else{
 if(tempDouble>=5.0){
 int preInt = Integer.parseInt(xPreDot);
 preInt++;
-xPreDot = (new Integer(preInt)).toString();
+xPreDot = (Integer.valueOf(preInt)).toString();
 }
 xPostDot = "0";
 }
@@ -1102,8 +1102,8 @@ return test;
 // Returns 1 if x > y
 // x and y are double
 public static int compare(double x, double y){
-Double X = new Double(x);
-Double Y = new Double(y);
+Double X = Double.valueOf(x);
+Double Y = Double.valueOf(y);
 return X.compareTo(Y);
 }
  
@@ -1112,8 +1112,8 @@ return X.compareTo(Y);
 // Returns 1 if x > y
 // x and y are int
 public static int compare(int x, int y){
-Integer X = new Integer(x);
-Integer Y = new Integer(y);
+Integer X = x;
+Integer Y = Integer.valueOf(y);
 return X.compareTo(Y);
 }
  
@@ -1122,8 +1122,8 @@ return X.compareTo(Y);
 // Returns 1 if x > y
 // x and y are long
 public static int compare(long x, long y){
-Long X = new Long(x);
-Long Y = new Long(y);
+Long X = x;
+Long Y = y;
 return X.compareTo(Y);
 }
  
@@ -1132,8 +1132,8 @@ return X.compareTo(Y);
 // Returns 1 if x > y
 // x and y are float
 public static int compare(float x, float y){
-Float X = new Float(x);
-Float Y = new Float(y);
+Float X = x;
+Float Y = y;
 return X.compareTo(Y);
 }
  
@@ -1142,8 +1142,8 @@ return X.compareTo(Y);
 // Returns 1 if x > y
 // x and y are short
 public static int compare(byte x, byte y){
-Byte X = new Byte(x);
-Byte Y = new Byte(y);
+Byte X = x;
+Byte Y = y;
 return X.compareTo(Y);
 }
  
@@ -1152,8 +1152,8 @@ return X.compareTo(Y);
 // Returns 1 if x > y
 // x and y are short
 public static int compare(short x, short y){
-Short X = new Short(x);
-Short Y = new Short(y);
+Short X = x;
+Short Y = y;
 return X.compareTo(Y);
 }
  
@@ -1778,17 +1778,17 @@ return bb;
 public static int[] indicesOf(double[] array, double value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1799,17 +1799,17 @@ return indices;
 public static int[] indicesOf(float[] array, float value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1820,17 +1820,17 @@ return indices;
 public static int[] indicesOf(long[] array, long value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1841,17 +1841,17 @@ return indices;
 public static int[] indicesOf(int[] array, int value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1862,17 +1862,17 @@ return indices;
 public static int[] indicesOf(short[] array, short value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1887,13 +1887,13 @@ ArrayList<Integer> arrayl = new ArrayList<Integer>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1904,17 +1904,17 @@ return indices;
 public static int[] indicesOf(char[] array, char value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i]==value){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
@@ -1925,11 +1925,11 @@ return indices;
 public static int[] indicesOf(String[] array, String value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i].equals(value)){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
@@ -1946,17 +1946,17 @@ return indices;
 public static int[] indicesOf(Object[] array, Object value){
 int[] indices = null;
 int numberOfIndices = 0;
-ArrayList<Integer> arrayl = new ArrayList<Integer>();
+ArrayList<Integer> arrayl = new ArrayList<>();
 for(int i=0; i<array.length; i++){
 if(array[i].equals(value)){
 numberOfIndices++;
-arrayl.add(new Integer(i));
+arrayl.add(i);
 }
 }
 if(numberOfIndices!=0){
 indices = new int[numberOfIndices];
 for(int i=0; i<numberOfIndices; i++){
-indices[i] = (arrayl.get(i)).intValue();
+indices[i] = (arrayl.get(i));
 }
 }
 return indices;
